# embedded-rtos-scheduler-sim

./: CMakeLists.txt  README.md
include/: i2c_mock.h  i2c_util.h  msg_queue.h  ringbuf.h
lib/: i2c_mock.c  i2c_util.c  ringbuf.c
src/: main.c  msg_queue.c
